--- a/text-tools/index.html
+++ b/text-tools/index.html
@@ -28,13 +28,13 @@
                 <p class="content-paragraph" id="shliokavitsa-res"></p>
             </li>
             <li>
-                <h2 class="secondary-text">Wierd Bulgarian</h2>
+                <h2 class="secondary-text">weird Bulgarian</h2>
                 <p class="content-paragraph">
-                    Wierd bulgarian is basicly the cyrillic alphabet, but the symbols are replaced<br> with similar sounding or looking letters.
+                    weird bulgarian is basicly the cyrillic alphabet, but the symbols are replaced<br> with similar sounding or looking letters.
                 </p>
-                <input type="text" id="wierdbg-ipt" placeholder="Enter bulgarian text here...">
-                <button id="wierdbg-btn">Convert</button>
-                <p class="content-paragraph" id="wierdbg-res"></p>
+                <input type="text" id="weirdbg-ipt" placeholder="Enter bulgarian text here...">
+                <button id="weirdbg-btn">Convert</button>
+                <p class="content-paragraph" id="weirdbg-res"></p>
             </li>
             <li>
                 <h2 class="secondary-text">Roman numeral parser</h2>
@@ -62,15 +62,15 @@
             });
         }
 
-        function wierdbg(bg) {
+        function weirdbg(bg) {
             let alpha = [
                 "абвгдежзийклмнопрстуфхцчшщъьюяАБВГДЕЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЬЮЯ", ["α", "b", "β", "g", "δ", "ε", "j", "ʒ", "i", "y", "c", "λ", "μ", "n", "ω", "p", "г", "σ", "t", "γ", "ƒ", "h", "t͡σ", "t͡ʃ", "ʃ", "ʃ͡t", "u", "ъ", "y͡γ", "y͡α", "Α", "B", "Β", "G", "Δ", "E", "J", "Ʒ", "I", "Y", "C", "Λ", "M", "N", "Ω", "P", "Г", "Σ", "T", "Γ", "Ƒ", "H", "T͡Σ", "T͡Ʃ", "ʃ", "Ʃ͡T", "U", "Ъ", "Y͡Γ", "Y͡Α"]
             ];
             bg.split("").forEach(lett => {
                 if (alpha[0].indexOf(lett) != -1) {
-                    document.querySelector("#wierdbg-res").innerHTML += alpha[1][alpha[0].indexOf(lett)];
+                    document.querySelector("#weirdbg-res").innerHTML += alpha[1][alpha[0].indexOf(lett)];
                 } else {
-                    document.querySelector("#wierdbg-res").innerHTML += lett;
+                    document.querySelector("#weirdbg-res").innerHTML += lett;
                 }
             });
         }
@@ -142,9 +142,9 @@
             document.querySelector("#shliokavitsa-res").innerHTML = "";
             shliokavitsa(document.querySelector("#shliokavitsa-ipt").value);
         });
-        document.querySelector("#wierdbg-btn").addEventListener("click", _ => {
-            document.querySelector("#wierdbg-res").innerHTML = "";
-            wierdbg(document.querySelector("#wierdbg-ipt").value);
+        document.querySelector("#weirdbg-btn").addEventListener("click", _ => {
+            document.querySelector("#weirdbg-res").innerHTML = "";
+            weirdbg(document.querySelector("#weirdbg-ipt").value);
         });
         document.querySelector("#roman-btn").addEventListener("click", _ => {
             document.querySelector("#roman-res").innerHTML = "";
