change "weird "to uppercase

--- a/text-tools/index.html
+++ b/text-tools/index.html
@@ -28,9 +28,9 @@
                 <p class="content-paragraph" id="shliokavitsa-res"></p>
             </li>
             <li>
-                <h2 class="secondary-text">weird Bulgarian</h2>
+                <h2 class="secondary-text">Weird Bulgarian</h2>
                 <p class="content-paragraph">
-                    weird bulgarian is basicly the cyrillic alphabet, but the symbols are replaced<br> with similar sounding or looking letters.
+                    Weird bulgarian is basicly the cyrillic alphabet, but the symbols are replaced<br> with similar sounding or looking letters.
                 </p>
                 <input type="text" id="weirdbg-ipt" placeholder="Enter bulgarian text here...">
                 <button id="weirdbg-btn">Convert</button>
