--- a/text-tools/index.html
+++ b/text-tools/index.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+    <a rel="me" href="https://mastodon.social/@gigog27" style="display: none;">Verifying mastodon.social link</a>
+    <a rel="me" href="https://toki.social/@gigog27" style="display: none;">Verifying toki.social link</a>
     <i class="incl-navbar"></i>
     <main>
         <h1 class="primary-text">Text tools</h1>
