add mastodon to contact page

--- a/contact/index.html
+++ b/contact/index.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+    <a rel="me" href="https://mastodon.social/@gigog27" style="display: none;">Verifying mastodon.social link</a>
+    <a rel="me" href="https://toki.social/@gigog27" style="display: none;">Verifying toki.social link</a>
     <i class="incl-navbar"></i>
     <main>
         <h1 class="primary-text">Contact me</h1>
@@ -25,6 +27,13 @@
             <li>
                 <div style="background-color: darkslategrey;"><a target="_blank" href="https://github.com/GiggioG/">Github: GiggioG</a></div>
                 <div style="background-color: cornflowerblue;"><a target="_blank" href="https://hub.docker.com/u/gigog">Docker Hub: gigog</a></div>
+            </li>
+        </ul>
+        <h2 class="secondary-text" id="mastodon">Mastodons</h2>
+        <ul class="contacts-ul content-paragraph">
+            <li>
+                <div style="background-color: #2b90d9;"><a target="_blank" href="https://mastodon.social/web/@gigog27">mastodon.social: Gigo_G</a></div>
+                <div style="background-color: #2b90d9;;"><a target="_blank" href="https://toki.social/web/@gigog27">toki.social: jan Kiko</a></div>
             </li>
         </ul>
     </main>
