replace bold with italic

--- a/projects/index.html
+++ b/projects/index.html
@@ -74,7 +74,7 @@
                 </tr>
                 <tr id="SHU">
                     <td><i class="incl-paused"></i>SHU</td>
-                    <td>A chrome extention that enables developers to make utility plugins for jitsimeet based systems like shkolo.bg.<br>The name comes from SHkoloUtilities.<b>Paused because I have no motivation.</b></td>
+                    <td>A chrome extention that enables developers to make utility plugins for jitsimeet based systems like shkolo.bg.<br>The name comes from SHkoloUtilities.<i>Paused because I have no motivation.</i></td>
                     <td><a target="_blank" href="https://github.com/GiggioG/shu/">Shu Github Repo</a></td>
                 </tr>
                 <tr id="Flappy-bird">
@@ -115,7 +115,7 @@
                 </tr>
                 <tr id="Bliznaci">
                     <td><i class="incl-paused"></i>Bliznaci</td>
-                    <td>A command-line browser for the gemini:// protocol. <b>Paused because I cannot figure out a bug.</b></td>
+                    <td>A command-line browser for the gemini:// protocol. <i>Paused because I cannot figure out a bug.</i></td>
                     <td><a target="_blank" href="https://github.com/GiggioG/bliznaci">Bliznaci Github Repo</a></td>
                 </tr>
                 <tr id="sdl2Base">
