--- a/projects/index.html
+++ b/projects/index.html
@@ -149,6 +149,15 @@
                         'What is WSID':'/wsid'
                     }, false)">Links</a></td>
                 </tr>
+                <tr id="Takavoza">
+                    <td><i class="incl-ready"></i>Takavoza</td>
+                    <td>An abugida for Bulgarian I made a long time ago.</td>
+                    <td><a class="projects-download-link" onclick="downloads({
+                        'PDF':'./projects/downloads/takavoza/takavoza.pdf',
+                        'HTML':'./projects/downloads/takavoza/takavoza.html',
+                        'Markdown':'./projects/downloads/takavoza/takavoza.md'
+                    }, true)">Download</a></td>
+                </tr>
             </tbody>
             </tbody>
         </table>
