Forgot about names. Also wrote about it's WSID.

--- a/projects/downloads/takavoza/takavoza.html
+++ b/projects/downloads/takavoza/takavoza.html
@@ -772,7 +772,7 @@ img.emoji-img.emoji {
     <body class="markdown-body">
         <h1 id="takavoza">Takavoza</h1>
 <h2 id="what-is-takavoza">What is Takavoza</h2>
-<p>Takavoza is a writing system I created back around autumn of 2019. It was inspired by Arabic script, but at the time I was in 4th grade and didn&apos;t know anything about how the Arabic script works.</p>
+<p>Takavoza is a writing system I created back around autumn of 2019. It was inspired by Arabic script, but at the time I was in 4th grade and didn&apos;t know anything about how the Arabic script works. It has a <a href="https://giggiog.github.io/wsid">WSID</a> of 7.</p>
 <h2 id="how-to-read-the-images-in-these-docs">How to read the images in these docs</h2>
 <p>Anything black is the Takavoza that the image&apos;s trying to show. Anything red is a placeholder to show you how things should be alined. Anything grey shows you what something means.</p>
 <h2 id="the-writing-system">The writing system</h2>
@@ -797,5 +797,9 @@ Again, one labeled <code>&#xD8;</code> is a placeholder vowel. It is used when w
 <p>Takavoza has a base 10 number system. The digits are written in a trapezoid with the bottom base missing and the linya forming the top base. <strong>WHEN WRITING NUMBERS THEY ARE ADDED ONTO THE LINYA, NOT CREATED FROM CURVING IT</strong>. This is demonstrated here:  <br>
 <img src="https://i.imgur.com/y1ccwPx.png" alt="Takavoza numbers">  <br>
 This is the number 1234567890.</p>
+<h2 id="names">Names</h2>
+<p>Because Takavoza doesn&apos;t have capital letters, names in the script are circled, like in Egyptian hieroglyphs, which is demonstrated here:  <br>
+<img src="https://i.imgur.com/txiNRYK.png" alt="Takavoza names">  <br>
+This says &quot;Takavoza&quot;.</p>
     </body>
 </html>
