--- a/projects/index.html
+++ b/projects/index.html
@@ -158,6 +158,15 @@
                         'Markdown':'./projects/downloads/takavoza/takavoza.md'
                     }, true)">Download</a></td>
                 </tr>
+                <tr id="Krtkp">
+                    <td><i class="incl-ready"></i>Krtkp and Srtd</td>
+                    <td>Two "shorthanding systems": one for Bulgarian and one for English. They share a documentation, because they are similar.</td>
+                    <td><a class="projects-download-link" onclick="downloads({
+                        'PDF':'./projects/downloads/krtkp/krtkp.pdf',
+                        'HTML':'./projects/downloads/krtkp/krtkp.html',
+                        'Markdown':'./projects/downloads/krtkp/krtkp.md'
+                    }, true)">Download</a></td>
+                </tr>
             </tbody>
             </tbody>
         </table>
