misc/quote: change random selection algorithm

--- a/misc/quote.html
+++ b/misc/quote.html
@@ -50,7 +50,7 @@
         let wisemen = ["Ghandi", "Confuci", "Churchill", "Plato", "Aristotle", "Diogenes", "Bophades", "Julius Caeser", "Sun Tzu", "Abraham Lincoln", "Albert Einstein", "Nikola Tesla", "Thomas Edison", "Bill Gates", "Steve Jobs", "Isaac Newton", "Galileo Galilei", "Leonardo da Vinci", "Stephen Hawking", "Socrates", "Octavian Augustus", "Marcus Aurelius", "Martin Luther King, Jr.", "Barack Obama", "Nelson Mandela", "William Shakespeare", "Warren Buffett", "Leonhard Euler", "Marie Curie", "Charles Darwin"]
 
         function randomWiseman() {
-            let rand = Math.floor(Math.random() * (wisemen.length + 1)) % wisemen.length;
+            let rand = Math.floor(Math.random() * (wisemen.length + 1));
             return wisemen[rand];
         }
 
