add inventar project

--- a/projects/index.html
+++ b/projects/index.html
@@ -167,6 +167,11 @@
                         'Markdown':'./projects/downloads/krtkp/krtkp.md'
                     }, true)">Download</a></td>
                 </tr>
+                <tr id="dogehouse-bot">
+                    <td><i class="incl-canceled"></i></i>Inventar</td>
+                    <td>Inventar е програма, в която може да вкараш притежанията си и тя да казва къде са.</td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/inventar">inventar Github Repo</a></td>
+                </tr>
             </tbody>
             </tbody>
         </table>
