--- a/projects/index.html
+++ b/projects/index.html
@@ -169,7 +169,7 @@
                 </tr>
                 <tr id="dogehouse-bot">
                     <td><i class="incl-canceled"></i></i>Inventar</td>
-                    <td>Inventar е програма, в която може да вкараш притежанията си и тя да казва къде са.</td>
+                    <td>Inventar е програма, в която може да вкарате притежанията си и тя да Ви казва къде са.</td>
                     <td><a target="_blank" href="https://github.com/GiggioG/inventar">inventar Github Repo</a></td>
                 </tr>
             </tbody>
