by accident was "canceled". label as "ready"

--- a/projects/index.html
+++ b/projects/index.html
@@ -168,7 +168,7 @@
                     }, true)">Download</a></td>
                 </tr>
                 <tr id="dogehouse-bot">
-                    <td><i class="incl-canceled"></i></i>Inventar</td>
+                    <td><i class="incl-ready"></i></i>Inventar</td>
                     <td>Inventar е програма, в която може да вкарате притежанията си и тя да Ви казва къде са.</td>
                     <td><a target="_blank" href="https://github.com/GiggioG/inventar">inventar Github Repo</a></td>
                 </tr>
