fix "inventar" entry

--- a/projects/index.html
+++ b/projects/index.html
@@ -167,10 +167,10 @@
                         'Markdown':'./projects/downloads/krtkp/krtkp.md'
                     }, true)">Download</a></td>
                 </tr>
-                <tr id="dogehouse-bot">
+                <tr id="inventar">
                     <td><i class="incl-ready"></i></i>Inventar</td>
                     <td>Inventar е програма, в която може да вкарате притежанията си и тя да Ви казва къде са.</td>
-                    <td><a target="_blank" href="https://github.com/GiggioG/inventar">inventar Github Repo</a></td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/inventar">Inventar Github Repo</a></td>
                 </tr>
             </tbody>
             </tbody>
