--- a/projects/index.html
+++ b/projects/index.html
@@ -167,10 +167,15 @@
                         'Markdown':'./projects/downloads/krtkp/krtkp.md'
                     }, true)">Download</a></td>
                 </tr>
-                <tr id="inventar">
+                <tr id="Inventar">
                     <td><i class="incl-ready"></i></i>Inventar</td>
                     <td>Inventar е програма, в която може да вкарате притежанията си и тя да Ви казва къде са.</td>
                     <td><a target="_blank" href="https://github.com/GiggioG/inventar">Inventar Github Repo</a></td>
+                </tr>
+                <tr id="Alexandria">
+                    <td><i class="incl-ready"></i></i>Alexandria</td>
+                    <td>"Backs up" files from the internet : allows taking snapshots and looking at past ones.</td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/inventar">Alexandria Github Repo</a></td>
                 </tr>
             </tbody>
             </tbody>
