--- a/projects/index.html
+++ b/projects/index.html
@@ -175,7 +175,7 @@
                 <tr id="Alexandria">
                     <td><i class="incl-ready"></i></i>Alexandria</td>
                     <td>"Backs up" files from the internet : allows taking snapshots and looking at past ones.</td>
-                    <td><a target="_blank" href="https://github.com/GiggioG/inventar">Alexandria Github Repo</a></td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/Alexandria">Alexandria Github Repo</a></td>
                 </tr>
             </tbody>
             </tbody>
