--- a/projects/index.html
+++ b/projects/index.html
@@ -177,6 +177,11 @@
                     <td>"Backs up" files from the internet : allows taking snapshots and looking at past ones.</td>
                     <td><a target="_blank" href="https://github.com/GiggioG/Alexandria">Alexandria Github Repo</a></td>
                 </tr>
+                <tr id="Alexandria">
+                    <td><i class="incl-ready"></i></i>Karty</td>
+                    <td>Playing card simulator. Play any card game you want!</td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/Karty">Karty Github Repo</a></td>
+                </tr>
             </tbody>
             </tbody>
         </table>
