remove unneeded closing </i> tags

--- a/projects/index.html
+++ b/projects/index.html
@@ -137,7 +137,7 @@
                     <td><a target="_blank" href="https://github.com/GiggioG/splitEdit">splitEdit Github Repo</a></td>
                 </tr>
                 <tr id="dogehouse-bot">
-                    <td><i class="incl-canceled"></i></i>dogehouse-bot</td>
+                    <td><i class="incl-canceled"></i>dogehouse-bot</td>
                     <td>A bot I made for <a target="_blank" href="https://github.com/benawad/dogehouse">Dogehouse</a> with nothing but raw websockets. I made it for fun because I like barebones stuff like this.</td>
                     <td><a target="_blank" href="https://github.com/GiggioG/dogehouse-bot">dogehouse-bot Github Repo</a></td>
                 </tr>
@@ -168,17 +168,17 @@
                     }, true)">Download</a></td>
                 </tr>
                 <tr id="Inventar">
-                    <td><i class="incl-ready"></i></i>Inventar</td>
+                    <td><i class="incl-ready"></i>Inventar</td>
                     <td>Inventar е програма, в която може да вкарате притежанията си и тя да Ви казва къде са.</td>
                     <td><a target="_blank" href="https://github.com/GiggioG/inventar">Inventar Github Repo</a></td>
                 </tr>
                 <tr id="Alexandria">
-                    <td><i class="incl-ready"></i></i>Alexandria</td>
+                    <td><i class="incl-ready"></i>Alexandria</td>
                     <td>"Backs up" files from the internet : allows taking snapshots and looking at past ones.</td>
                     <td><a target="_blank" href="https://github.com/GiggioG/Alexandria">Alexandria Github Repo</a></td>
                 </tr>
                 <tr id="Alexandria">
-                    <td><i class="incl-ready"></i></i>Karty</td>
+                    <td><i class="incl-ready"></i>Karty</td>
                     <td>Playing card simulator. Play any card game you want!</td>
                     <td><a target="_blank" href="https://github.com/GiggioG/Karty">Karty Github Repo</a></td>
                 </tr>
