--- a/wsid/index.html
+++ b/wsid/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./res/css/style.css">
     <script src="https://kit.fontawesome.com/ad53433535.js" crossorigin="anonymous"></script>
     <script src="./res/js/includes.js" data-includes="navbar,./res/includes/nav.html|fonts,./res/includes/fonts.html"></script>
+    <script src="./res/js/includesJS.js" data-includes="./res/js/theme.js"></script>
 </head>
 
 <body>
