add url warning

--- a/misc/ngl/create.html
+++ b/misc/ngl/create.html
@@ -99,6 +99,7 @@
             modalDiv.innerHTML = `
                 <h2 class="modal-h">Your link is ready!</h2>
                 <a href="${finalLink}" class="modal-a">${finalLink}</a>
+                <p class="modal-text">You have to use a url shortener to put the link on your story.</p>
                 <div class="modal-buttons">
                     <button class="modal-button" onclick="copyLink(finalLink);">Copy Link</button>
                     <button class="modal-button" onclick="removeModal();">Close</button>
