--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <i class="incl-fonts"></i>
     <link rel="stylesheet" href="./res/css/style.css">
     <script src="https://kit.fontawesome.com/ad53433535.js" crossorigin="anonymous"></script>
-    <script src="./res/js/includes.js" data-includes="navbar,./res/includes/nav.html|fonts,./res/includes/fonts.html"></script>
     <script src="./res/js/theme.js"></script>
+    <script src="./res/js/includes.js" data-includes="navbar,./res/includes/nav.html,initTheme();|fonts,./res/includes/fonts.html"></script>
 </head>
 
 <body>
