fix resolution on pc

--- a/misc/igrata/index.html
+++ b/misc/igrata/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Играта</title>
     <link rel="stylesheet" href="style.css">
+    <script src="lib_util.js"></script>
 </head>
 <body>
     <h1 id="message">Current turn: <span id="turn"></span></h1>
