--- a/projects/index.html
+++ b/projects/index.html
@@ -193,6 +193,15 @@
                         'Markdown':'./projects/downloads/muzikalen/muzikalen.md'
                     }, true)">Download</a></td>
                 </tr>
+                <tr id="expressingDate">
+                    <td><i class="incl-ready"></i>Expressing Date</td>
+                    <td>A notation for writing dates. WSID: 109</td>
+                    <td><a class="projects-download-link" onclick="downloads({
+                        'PDF':'./projects/downloads/expressingDate/expressingDate.pdf',
+                        'HTML':'./projects/downloads/expressingDate/expressingDate.html',
+                        'Markdown':'./projects/downloads/expressingDate/expressingDate.md'
+                    }, true)">Download</a></td>
+                </tr>
             </tbody>
             </tbody>
         </table>
