add some projects

--- a/projects/index.html
+++ b/projects/index.html
@@ -179,7 +179,7 @@
                     <td>"Backs up" files from the internet : allows taking snapshots and looking at past ones.</td>
                     <td><a target="_blank" href="https://github.com/GiggioG/Alexandria">Alexandria Github Repo</a></td>
                 </tr>
-                <tr id="Alexandria">
+                <tr id="Karty">
                     <td><i class="incl-ready"></i>Karty</td>
                     <td>Playing card simulator. Play any card game you want!</td>
                     <td><a target="_blank" href="https://github.com/GiggioG/Karty">Karty Github Repo</a></td>
@@ -201,6 +201,51 @@
                         'HTML':'./projects/downloads/expressingDate/expressingDate.html',
                         'Markdown':'./projects/downloads/expressingDate/expressingDate.md'
                     }, true)">Download</a></td>
+                </tr>
+                <tr id="Connect-4-balls">
+                    <td><i class="incl-ready"></i>Connect-4-balls</td>
+                    <td>A copy of connect 4, made for a game jam.</td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/Connect-4-balls">Connect-4-balls Github Repo</a></td>
+                </tr>
+                <tr id="SpaceKitty">
+                    <td><i class="incl-ready"></i>SpaceKitty</td>
+                    <td>An unfinished game from a game jam.</td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/SpaceKitty">SpaceKitty Github Repo</a></td>
+                </tr>
+                <tr id="GeometryWars">
+                    <td><i class="incl-ready"></i>GeometryWars</td>
+                    <td>An SDL project from a masteclass in the summer of 2024.</td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/GeometryWars">GeometryWars Github Repo</a></td>
+                </tr>
+                <tr id="dont-touch-the-spikes">
+                    <td><i class="incl-ready"></i>dont-touch-the-spikes</td>
+                    <td>A game from a game jam, that I did solo.</td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/dont-touch-the-spikes">dont-touch-the-spikes Github Repo</a></td>
+                </tr>
+                <tr id="Queens-game">
+                    <td><i class="incl-ready"></i>Queens-game</td>
+                    <td>A game I made in a masterclass on SDL2 C++ Programming in 2023.</td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/Queens-game">Queens-game Github Repo</a></td>
+                </tr>
+                <tr id="chinese_chess">
+                    <td><i class="incl-ready"></i>chinese_chess</td>
+                    <td>A game I made in a masterclass on SDL2 C++ Programming in 2022.</td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/chinese_chess">chinese_chess Github Repo</a></td>
+                </tr>
+                <tr id="plato-gpt">
+                    <td><i class="incl-ready"></i>plato-gpt</td>
+                    <td>A tool where you can chat with Plato using OpenAI's API. Made for a school project</td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/plato-gpt">plato-gpt Github Repo</a></td>
+                </tr>
+                <tr id="rplace-2023-bulgaria">
+                    <td><i class="incl-ready"></i>rplace-2023-bulgaria</td>
+                    <td>The tools used for r/place 2023 by the <a href="https://reddit.com/r/bulgaria">r/bulgaria</a> community.</td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/rplace-2023-bulgaria">rplace-2023-bulgaria Github Repo</a></td>
+                </tr>
+                <tr id="igrata">
+                    <td><i class="incl-ready"></i>igrata</td>
+                    <td>A game my friends from school invented and that I made into an online version</td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/igrata">igrata Github Repo</a></td>
                 </tr>
             </tbody>
             </tbody>
